--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-to-print": "^2.14.3",
+    "react-toastify": "^8.1.0",
+    "web-vitals": "^2.1.2",
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
